--- a/faktaside.html
+++ b/faktaside.html
@@ -197,31 +197,27 @@ Det samme sikkerhetsfirmaet fant 482 millioner forsøk på Phishing angrrep i 20
           </div>
 
           <div class="blog-post">
+              <div class="avsnitt">
+                <h4>Hva kan du gjøre mot phishing angrep?</h4>
+              <p>Siden det er to hovedmåter hackere bruker Phishing på, kan man også si at det er to hovedmåter å beskytte seg mot det på. Den ene måten er å beskytte systemet sitt, mens den andre måten er å “beskytte” de ansatte i systemet.</p>
+
+
+            </div>
             <div class="avsnitt">
-
-              <p>Videre kan man se på spoofing via email som har samme utseende som et annen type angrep, nemlig “phishing”. Her sendes det mailer ut til brukere hvor avsender (svindleren) gjerne bruker kjente logoer og bilder som skal skape
-                tillit hos mottakerne. Her ønsker de ofte å fremstille seg selv som en representant av kjente banker, bedrifter og/eller aktører i tilknytning av rettssystemer nettopp fordi det skaper tillit hos bruker, samt informasjon av verdi
-                lettere kan lekkes. Samtidig kan det også være at svindleren bruker navn på personer du allerede har en tilknytning til som avsender. Eksempelvis her kan det være en kollega av deg, eller kanskje også sjefen din. Mer om phishing senere, men det er viktig å få frem at spoofing også ofte foregår via email.</p>
-
-
+              <p>Når det kommer til å beskytte datasystemet sitt, så er det viktig å oppdatere systemene så man vet at de inneholder de siste sikkerhetsoppdateringene. Man kan også sette restriksjoner på mail, som kan hindre at Phishing angrep og hackeres mailer går gjennom til inbokser. </p>
+            </div>
+            <div class="avsnitt">
+              <p>Det aller viktigste en bedrift kan gjøre både for å beskytte datasystemene sine og sensitiv informasjon er å lære opp de ansatte. De ansatte er det svakeste leddet i et system og det vil alltid være gjennom de ansatte at et Phishing angrep vil bli iverksatt. Uansett om hackeren bruker Phishing angrep for å lure en ansatt til å oppgi sensitiv informasjon eller til å laste ned et farlig program, er det alltid den ansatte som tar valget. Ved å lære opp ansatte til å kjenne igjen hva som er et forsøk på Phishing angrep og ikke, kan en organisasjon spare seg for masse problemer. Det viktigste rådet til en ansatt som leser en litt ukjent epost er alltid å stoppe å tenke gjennom eposten, før man klikker noe. </p>
+              <p>Dette er et eksempel på et Phishing angrep. Mailen ser svært ufarlig ut, den inneholder bare en link til et svært kjent nettsted. Men med en gang man beveger musen over linken kan man se at det er en skjult link. Man kommer ikke til itslearning ved å trykke på linken, men et helt annet nettsted som hackeren har bestemt.</p>
+              <img src="media/phishing.png" alt="bildeeksempel phishing"></img>
             </div>
 
-            <div class="avsnittQuiz">
-
-              <h4>Har du fått med deg spoofing?</h4>
-              <p><b>Hvordan kan man lettest mulig unngå spoofing og andre typer angrep?</b></p>
-              <input type="radio" class="quiz1" name="1" value="1">Bruk sunn fornuft og ta kontakt med fagpersoner ved usikkerhet.<br>
-              <input type="radio" class="quiz1" name="1" value="2">La være å svare de som ringer med “ukjent” nummer. <br>
-              <input type="radio" class="quiz1" name="1" value="3">Det er umulig å unngå spoofing angrep. <br>
-              <button type="button" name="button" onclick="sjekksvar()">Sjekk svar</button>
-
-            </div>
 
             <div class="avsnitt">
-            <p>For å beskytte deg selv mot phishing anbefaler vi derfor at du tar deg god tid når du leser over mail, spesielt mailer som inneholder lenker. Alltid vær på vakt og husk at det er mer enn bare stjeling av informasjon som kan foregå. Ikke vær redd for å be om hjelp.</p>
+            <p>For å beskytte deg selv mot phishing anbefaler vi hvertfall at du tar deg god tid når du leser over mail, spesielt mailer som inneholder lenker. Alltid vær på vakt og husk at det er mer enn bare stjeling av informasjon som kan foregå. Ikke vær redd for å be om hjelp.</p>
             </div>
 
-            <h3>Kilder angående spoofing: <a href="https://softwarelab.org/what-is-spoofing/"></a> https://softwarelab.org/what-is-spoofing/</h3>
+            <h3>Kilder angående phishing: <a href="https://softwarelab.org/what-is-spoofing/"></a> https://softwarelab.org/what-is-spoofing/</h3>
 
           </div>
         </div>
