--- a/faktaside.html
+++ b/faktaside.html
@@ -208,12 +208,13 @@ Det samme sikkerhetsfirmaet fant 482 millioner forsøk på Phishing angrrep i 20
             </div>
             <div class="avsnitt">
               <p>Det aller viktigste en bedrift kan gjøre både for å beskytte datasystemene sine og sensitiv informasjon er å lære opp de ansatte. De ansatte er det svakeste leddet i et system og det vil alltid være gjennom de ansatte at et Phishing angrep vil bli iverksatt. Uansett om hackeren bruker Phishing angrep for å lure en ansatt til å oppgi sensitiv informasjon eller til å laste ned et farlig program, er det alltid den ansatte som tar valget. Ved å lære opp ansatte til å kjenne igjen hva som er et forsøk på Phishing angrep og ikke, kan en organisasjon spare seg for masse problemer. Det viktigste rådet til en ansatt som leser en litt ukjent epost er alltid å stoppe å tenke gjennom eposten, før man klikker noe. </p>
-              <p>Dette er et eksempel på et Phishing angrep. Mailen ser svært ufarlig ut, den inneholder bare en link til et svært kjent nettsted. Men med en gang man beveger musen over linken kan man se at det er en skjult link. Man kommer ikke til itslearning ved å trykke på linken, men et helt annet nettsted som hackeren har bestemt.</p>
+              <p>Under ser du et eksempel på hvordan en phishing link kan se ut. Mailen ser svært ufarlig ut, den inneholder bare en link til et svært kjent nettsted. Men med en gang man beveger musen over linken kan man se at det er en skjult link. Man kommer ikke til itslearning ved å trykke på linken, men et helt annet nettsted som hackeren har bestemt.</p>
               <img src="media/phishing.png" alt="bildeeksempel phishing"></img>
             </div>
 
 
             <div class="avsnitt">
+              <br>
             <p>For å beskytte deg selv mot phishing anbefaler vi hvertfall at du tar deg god tid når du leser over mail, spesielt mailer som inneholder lenker. Alltid vær på vakt og husk at det er mer enn bare stjeling av informasjon som kan foregå. Ikke vær redd for å be om hjelp.</p>
             </div>
 
