--- a/faktaside.html
+++ b/faktaside.html
@@ -47,7 +47,7 @@
 
             <div class="avsnittQuiz">
 
-              <h4>Har du fått med deg spoofing?</h4>
+              <h4>Kontrollspørsmål spoofing?</h4>
               <p><b>Hva er spoofing?</b></p>
               <input type="radio" class="quiz1" name="1" value="1">Spoofing handler om å få noe til å forsvinne.<br>
               <input type="radio" class="quiz1" name="1" value="2">Spoofing handler om å bruke en annens identitet til å få tilgang på informasjon, data osv.<br>
@@ -69,7 +69,7 @@
 
             <div class="avsnittQuiz">
 
-              <h4>Har du fått med deg spoofing?</h4>
+              <h4>Kontrollspørsmål spoofing?</h4>
               <p><b>Er tillit et suksessfaktor for et spoofing angrep? </b></p>
               <input type="radio" class="quiz1" name="1" value="1">Nei, absolutt ikke. Det siste en svindler trenger for å lykkes er vedkommendes tillit.<br>
               <input type="radio" class="quiz1" name="1" value="2">Nei, tillit er bare en bonus for svindleren. <br>
@@ -91,7 +91,7 @@
 
             <div class="avsnittQuiz">
 
-              <h4>Har du fått med deg spoofing?</h4>
+              <h4>Kontrollspørsmål spoofing?</h4>
               <p><b>Vi har mange ulike kilder, men via hvilken er det mest vanlig at et cyber-angrep foreløper?</b></p>
               <input type="radio" class="quiz1" name="1" value="1">Over Telefonen <br>
               <input type="radio" class="quiz1" name="1" value="2">Via Email <br>
@@ -114,7 +114,7 @@
 
             <div class="avsnittQuiz">
 
-              <h4>Har du fått med deg spoofing?</h4>
+              <h4>Kontrollspørsmål spoofing?</h4>
               <p><b>Hvordan kan man lettest mulig unngå spoofing og andre typer angrep?</b></p>
               <input type="radio" class="quiz1" name="1" value="1">Bruk sunn fornuft og ta kontakt med fagpersoner ved usikkerhet.<br>
               <input type="radio" class="quiz1" name="1" value="2">La være å svare de som ringer med “ukjent” nummer. <br>
@@ -143,7 +143,7 @@
 
             <div class="avsnittQuiz">
 
-              <h4>Har du fått med deg phishing?</h4>
+              <h4>Kontrollspørsmål phishing?</h4>
               <p><b>Hva er Phishing?</b></p>
               <input type="radio" class="quiz1" name="1" value="1">En type svindelforsøk, ofte gjennom mail, hvor hackere lurer brukere til å oppgi sensitiv informasjon eller laste ned malware.<br>
               <input type="radio" class="quiz1" name="1" value="2">En type svindelforsøk der hackere bruker virus til direkte bryte seg inn i systemet.<br>
@@ -163,7 +163,7 @@
 
             <div class="avsnittQuiz">
 
-              <h4>Har du fått med deg spoofing?</h4>
+              <h4>Kontrollspørsmål phishing?</h4>
               <p><b>Du får en e-post fra kollega Asgeir med en link som virker tilsynelatende legitim. Likevel finner du noen småfeil i rettskrivingen. Hvordan burde du tenke rundt dette?</b></p>
               <input type="radio" class="quiz1" name="1" value="1">Dette er en trygg lenke uten grunn til bekymring siden Asgeir er en grei fyr og han ville aldri gjort noe for å stjele eller ødelegge informasjonen min<br>
               <input type="radio" class="quiz1" name="1" value="2">Vær varsom før du trykker på lenken, rettskrivningsfeilene er ulikt Asgeir og dette kan kanskje være en sikkerhetstrussel. Ikke skriv inn noe informasjon og vurder om du skal kontakte sikkerhetsansvarlig før du gjør noe som helst<br>
@@ -185,7 +185,7 @@ Det samme sikkerhetsfirmaet fant 482 millioner forsøk på Phishing angrrep i 20
 
             <div class="avsnittQuiz">
 
-              <h4>Har du fått med deg phishing?</h4>
+              <h4>Kontrollspørsmål phishing?</h4>
               <p><b>Hvor utbredt er Phishing?</b></p>
               <input type="radio" class="quiz1" name="1" value="1">Phishing forekommer svært sjeldent, du vil sannsynligvis aldri bli utsatt for dette. <br>
               <input type="radio" class="quiz1" name="1" value="2">Phishing er i dag en svært vanlig måte for hackere å angripe brukere på. 1 mail av ca. 3000 er et forsøk på Phishing.<br>
@@ -218,7 +218,9 @@ Det samme sikkerhetsfirmaet fant 482 millioner forsøk på Phishing angrrep i 20
             <p>For å beskytte deg selv mot phishing anbefaler vi hvertfall at du tar deg god tid når du leser over mail, spesielt mailer som inneholder lenker. Alltid vær på vakt og husk at det er mer enn bare stjeling av informasjon som kan foregå. Ikke vær redd for å be om hjelp.</p>
             </div>
 
-            <h3>Kilder angående phishing: <a href="https://softwarelab.org/what-is-spoofing/"></a> https://softwarelab.org/what-is-spoofing/</h3>
+            <h3>Kilder angående phishing: <a href="https://nettvett.no/phishing/"></a> https://nettvett.no/phishing/<br>
+            -Bergsjø, H.B og Windvik, R.W. (2018) Datasikkerhet for ledere. 2. Utg. Oslo: 	Universitetsforlaget.
+            </h3>
 
           </div>
         </div>
