- enda fiks på kildelenke

--- a/faktaside.html
+++ b/faktaside.html
@@ -123,7 +123,7 @@
 
             </div>
 
-            <h3>Kilder angående spoofing:</h3> <a href="https://softwarelab.org/what-is-spoofing/"></a> https://softwarelab.org/what-is-spoofing/</h3>
+            <h3>Kilder angående spoofing: <a href="https://softwarelab.org/what-is-spoofing/"> https://softwarelab.org/what-is-spoofing/</a></h3>
 
           </div>
 
@@ -218,7 +218,7 @@ Det samme sikkerhetsfirmaet fant 482 millioner forsøk på Phishing angrrep i 20
             <p>For å beskytte deg selv mot phishing anbefaler vi hvertfall at du tar deg god tid når du leser over mail, spesielt mailer som inneholder lenker. Alltid vær på vakt og husk at det er mer enn bare stjeling av informasjon som kan foregå. Ikke vær redd for å be om hjelp.</p>
             </div>
 
-            <h3>Kilder angående phishing:</h3> <a href="https://nettvett.no/phishing/"></a> https://nettvett.no/phishing/<br>
+            <h3>Kilder angående phishing:</h3> <a href="https://nettvett.no/phishing/"> https://nettvett.no/phishing/</a><br>
             -Bergsjø, H.B og Windvik, R.W. (2018) Datasikkerhet for ledere. 2. Utg. Oslo: 	Universitetsforlaget.
 
 
