--- a/hovedside.html
+++ b/hovedside.html
@@ -34,7 +34,7 @@
               <div class="site-wrapper-inner">
                 <div class="cover-container" style="display:flex !important;">
 
-                  <iframe style="margin: auto;"width="800" height="450" src="https://www.youtube.com/embed/_zI9i1IxEpM" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe style="margin: auto;"width="800" height="450" src="https://www.youtube.com/embed/Uzv9mChUKLg" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 </div>
 
