--- a/hovedside.html
+++ b/hovedside.html
@@ -16,15 +16,13 @@
                 <li class="nav-item mr-5 ">
                     <a class="nav-link" href="index.html">Hovedside</a>
                 </li>
+                <li class="nav-item mr-5 ">
+                  <a class="nav-link" href="hovedside.html">Video</a>
+                </li>
                 <li class="nav-item mr-5">
                     <a class="nav-link" href="faktaside.html">Fakta</a>
                 </li>
-                <li class="nav-item mr-5">
-                    <a class="nav-link" href="quiz.html">Quiz</a>
-                </li>
-                <li class="nav-item mr-5">
-                    <a class="nav-link" href="kilder.html">Kilder</a>
-                </li>
+
             </ul>
         </div>
       </div>
@@ -34,7 +32,7 @@
               <div class="site-wrapper-inner">
                 <div class="cover-container" style="display:flex !important;">
 
-                  <iframe style="margin: auto;"width="800" height="450" src="https://www.youtube.com/embed/Uzv9mChUKLg" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe style="margin: auto;"width="800" height="450" src="https://www.youtube.com/embed/_zI9i1IxEpM" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 </div>
 
