--- a/index.html
+++ b/index.html
@@ -15,21 +15,19 @@
                 <li class="nav-item mr-5 ">
                     <a class="nav-link" href="index.html">Hovedside</a>
                 </li>
+                <li class="nav-item mr-5 ">
+                  <a class="nav-link" href="hovedside.html">Video</a>
+                </li>
                 <li class="nav-item mr-5">
                     <a class="nav-link" href="faktaside.html">Fakta</a>
                 </li>
-                <li class="nav-item mr-5">
-                    <a class="nav-link" href="quiz.html">Quiz</a>
-                </li>
-                <li class="nav-item mr-5">
-                    <a class="nav-link" href="kilder.html">Kilder</a>
-                </li>
+
             </ul>
         </div>
         <div class="Introduksjon2 jumbotron" style="text-align:center;">
           <div class="container">
-            <h1 class="display-3">Overskrift Team01</h1>
-            <p>Dette er en side ment for å informere lærere om hvordan de kan sikre seg på data / over nett, uaiowgnfwaognaowi awgnwaign aiwgnawi aiwgunawiugna awgawiugnwaui mer skrift / generell introduksjon</p>
+            <h5 class="display-4">Datasikkerhets opplæring for ansatte ved videregående skole</h5>
+            <p>Dette er en side laget for å informere dere lærere om hvordan dere kan sikre dere på data / over nett, nedenfor ser du en oversikt over de forskjellige læringselementene vi har laget. For å navigere deg rundt underveis kan du også bruke navigasjonsbaren på toppen</p>
 
           </div>
         </div>
