stilendring på hovedsiden

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
           <div class="container">
-            <div class="row">
+            <div class="row" style="justify-content:center !important; ">
               <div class="col-md-4">
                 <h2>Video</h2>
                 <p>På denne siden finner du en video vi har laget, som tar for seg alt av informasjon om hva du burde sikre deg mot på arbeidsplassen, og hva slags sikkerhetstiltak du burde gjøre for å sørge for dette</p>
@@ -44,11 +44,11 @@
                 <p>Hvis du ønsker å få ne mer detaljert forklaring av de forskjellige temaene som videoen tok for seg kan du gå inn på denne siden og lese mer om det. I tillegg har vi lagt ved noen små spørsmål mens du leser for å sørge for at du har fått med deg det du har lest</p>'
                 <p> <a href="faktaside.html" class="btn btn-secondary" role="button" >Gå til side</a> </p>
               </div>
-              <div class="col-md-4">
+            <!--  <div class="col-md-4">
                 <h2>Quiz</h2>
                 <p>Her har vi samlet en rekke spørsmål om infoen vi har på siden vår. Om du vil bruke denne quizen som en del av å lære deg tiltakene eller som en slags "prøve" til slutt er opp til deg.</p>
                 <p> <a href="quiz.html" class="btn btn-secondary" role="button" >Gå til side</a> </p>
-              </div>
+              </div> -->
 
             </div>
 
